--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,18 @@
-theme: jekyll-theme-cayman
-permalink: /:title/
+#theme: jekyll-theme-cayman
+#permalink: /:title/
+# Site settings
+title: Arctic Fox
+email: 
+description: > # this means to ignore newlines until "baseurl:"
+  Jekyll Theme Demo
+baseurl: "/arctic-fox-theme" # the subpath of your site, e.g. /blog/
+url: "http://astrocamp22.github.io" # the base hostname & protocol for your site
+twitter_username: username
+github_username: username
+
+# Build settings
+markdown: redcarpet
+markdown_ext:  markdown,mkdown,mkdn,mkd,md
+
+redcarpet:
+  extensions: ["tables", "autolink", "strikethrough", "space_after_headers", "fenced_code_blocks"]
